Add functioning rule and fix occurrences